[tool.poetry]
name = "repamatrix"
version = "0.0.1"
description = "cmatrix like terminal 'screen saver'"
authors = ["Gyuri Horak <dyuri@horak.hu>"]
repository = "https://github.com/dyuri/repamatrix"
license = "MIT"
readme = "README.md"
classifiers=[
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'Operating System :: OS Independent',
    'Programming Language :: Python'
]

[tool.poetry.dependencies]
python = "^3.6"
blessed = "^1.17.4"
repacolors = {version = "^0.5.0", optional = true}
pillow = {version = "^7.1.2", optional = true}

[tool.poetry.extras]
colors = ["repacolors"]
image = ["pillow"]

[tool.poetry.scripts]
repamatrix = 'repamatrix:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
